deploy/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bnpl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    enable-opentracing: "true"
    jaeger-collector-host: opentelemetry-collector.observability
    jaeger-propagation-format: w3c
    jaeger-sampler-type: ratelimiting
    jaeger-sampler-param: 1
    cert-manager.io/cluster-issuer: "mkcert-cluster-issuer" 
spec:
  defaultBackend:
    service:
      name: golang-reference-api
      port:
        number: 80
  tls:
    - hosts:
        - bnpl.fiat.dev
      secretName: bnpl-fiat-dev
  rules:
    - host: bnpl.fiat.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: golang-reference-api
              port:
                number: 80
